Добавил флаги для запуска тестов из библиотеки пайтеста

--- a/pytest.ini
+++ b/pytest.ini
@@ -19,6 +19,21 @@ addopts =
     # Записывает результаты прохождения кейсов в папку results
     --alluredir=allure-results
 
+    # Подробный вывод
+    -v
+
+    # Останавливаться после первого упавшего теста
+    -x
+
+    # Показывать локальные переменные при ошибках
+    -l
+
+    # Показать 10 самых медленных тестов
+    --durations=30
+
+    # Отключить предупреждения в отчете
+    --disable-warnings
+
     # сохраняет скриншоты при ошибках в папку Screenshots
-    --screenshot=on
-    --screenshot_path=on
+    --screenshot=only
+    --screenshot-dir=Screenshots
