--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .DS_Store
 
 # Ignore Python virtual environment
-venv/
+.venv
 
 # Ignore Python cache files
 __pycache__/
@@ -17,3 +17,4 @@ build/
 # Ignore IDE and editor files
 .idea/
 .vscode/
+
