Поправил сервис бекенда в докер компоуз и там мелкие правки PEP8

--- a/Environments.env
+++ b/Environments.env
@@ -4,4 +4,4 @@ PORT=8000
 SECRET_KEY=supersecretkey123
 DEBUG=False
 USER_NAME=new_user
-MONGO_URL="mongodb://localhost:27017/
+MONGO_URL="mongodb://localhost:27017/"
