feat: Реорганизация проекта в микросервисную архитектуру
- Разделение проекта на независимые сервисы:
  * e2e-automation/ - E2E тестирование
  * backend/ - Backend сервис
  * frontend/ - Frontend сервис
  * api-tests/ - API тестирование
  * db-tests/ - DB тестирование
  * scripts/ - Общие скрипты

- Каждый сервис имеет:
  * Собственные зависимости (requirements.txt)
  * Изолированные переменные окружения (.env)
  * Индивидуальные Dockerfile
  * Документацию (README.md)

- Улучшения безопасности:
  * Создан .env файл для секретов
  * Обновлен .gitignore для защиты конфиденциальных данных
  * Удалены хардкодные токены

- Очистка проекта:
  * Удалены неиспользуемые файлы и папки
  * Удалены дублирующиеся README файлы
  * Удалены устаревшие конфигурационные файлы

- Обновлен docker-compose.yml для новой структуры
- Добавлена поддержка всех типов тестов в Docker

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,30 @@ build/
 .idea/
 .vscode/
 
+# ===========================================
+# SECURITY - DO NOT COMMIT SECRETS
+# ===========================================
+
+# Environment variables with secrets
+.env
+.env.local
+.env.production
+.env.staging
+
+# Configuration files with secrets
+Environments.env
+config.ini
+secrets.json
+
+# Logs that might contain sensitive data
+*.log
+logs/
+
+# Temporary files
+*.tmp
+*.temp
+
+Allure reports (optional - uncomment if you don't want to track them)
+allure-reports/
+allure-results/
+
