feat: Implement Selenium Grid and improve E2E automation
- Add Selenium Grid setup with Chrome and Firefox nodes
- Implement Page Object Model refactoring for login tests
- Add Allure reporting with automatic result processing
- Create test execution script with delay for Allure processing
- Add comprehensive .gitignore files for all services
- Fix backend password hashing (bcrypt -> pbkdf2_sha256)
- Update frontend API endpoint for Docker network
- Add pytest configuration and markers
- Remove unused locators and clean up code structure
- Add Docker Compose profiles for testing

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ build/
 # Ignore IDE and editor files
 .idea/
 .vscode/
+.cursor/
 
 # ===========================================
 # SECURITY - DO NOT COMMIT SECRETS
@@ -41,7 +42,21 @@ logs/
 *.tmp
 *.temp
 
-Allure reports (optional - uncomment if you don't want to track them)
-allure-reports/
+# Allure reports (optional - uncomment if you don't want to track them)
+# allure-reports/
+# allure-results/
+
+# Test artifacts
 allure-results/
+allure-reports/
+allure-history/
+screenshots/
+*.png
+*.jpg
+*.jpeg
+
+# Docker volumes and data
+postgres_data/
+mongodb_data/
+redis_data/
 
