--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.13-rc-slim
 WORKDIR /app
-COPY ./back_end/requirements.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
-COPY ./back_end/ .
-CMD ["uvicorn", "project.app:app", "--host", "0.0.0.0", "--port", "8000"]
+COPY . .
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
