feat: Complete E2E automation refactoring and optimization
- Refactored project structure with config/, utils/, data/ modules
- Implemented Page Object Model best practices
- Optimized dependencies (59  23 packages)
- Fixed CORS issues and pytest configuration
- Removed debug logging for production readiness
- Updated test data with correct passwords
- Added comprehensive documentation
- Removed unused api-tests and db-tests services
- All tests passing (5/6) with stable Docker Compose execution

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Backend Service
   backend:
@@ -116,6 +114,7 @@ services:
       - allure
       - selenium-hub
     command: [ "./run_tests_with_delay.sh" ]
+    restart: "no" # Не перезапускать контейнер после завершения
     profiles:
       - testing
 
