--- a/e2e-automation/pytest.ini
+++ b/e2e-automation/pytest.ini
@@ -1,32 +1,48 @@
 [pytest]
-# Настройки вывода
-addopts = 
-    -v
-    --tb=short
-    --disable-warnings
-    --durations=10
-    --alluredir=../allure-results
-    --browser-name=chrome
+# Test discovery
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
 
-# Маркеры для категоризации тестов
+# Command line options
+addopts = -v --tb=short --disable-warnings --alluredir=allure-results --browser-name=chrome --screenshot=on --screenshot_path=../screenshots
+
+# Markers
 markers =
-    crit: Критические тесты (smoke, основные функции)
-    medium: Средние тесты (функциональные тесты)
-    low: Низкоприоритетные тесты (UI, валидация)
-    smoke: Дымовые тесты (быстрая проверка основных функций)
-    regression: Регрессионные тесты
-    api: API тесты
-    ui: UI тесты
-    login: Тесты авторизации
-    validation: Тесты валидации
-    navigation: Тесты навигации
-    slow: Медленные тесты
-    skip: Пропущенные тесты
-    xfail: Ожидаемо падающие тесты
-    flaky: Нестабильные тесты (будут перезапущены)
+    crit: Critical tests
+    medium: Medium priority tests
+    low: Low priority tests
+    smoke: Smoke tests
+    regression: Regression tests
+    api: API tests
+    ui: UI tests
+    login: Login related tests
+    validation: Form validation tests
+    navigation: Navigation tests
+    slow: Slow running tests
+    skip: Skip this test
+    xfail: Expected to fail
+    flaky: Flaky test
 
-# Настройки для отчета о времени выполнения
-durations = 10
+# Logging
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
 
-# Настройки для остановки на ошибках
-maxfail = 5
+# Environment variables
+env =
+    FRONTEND_URL = http://frontend:80
+    BACKEND_URL = http://backend:5000
+    SELENIUM_HUB_URL = http://selenium-hub:4444/wd/hub
+    BROWSER_NAME = chrome
+    HEADLESS = false
+    IMPLICIT_WAIT = 15
+    PAGE_LOAD_TIMEOUT = 30
+    SCREENSHOT_ON_FAILURE = true
+    MAX_RETRIES = 2
+    RETRY_DELAY = 1
+
+# Test execution
+minversion = 6.0
