--- a/e2e-automation/pytest.ini
+++ b/e2e-automation/pytest.ini
@@ -1,48 +1,94 @@
-[pytest]
-# Test discovery
+[tool:pytest]
+# Основные настройки
+minversion = 6.0
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Command line options
-addopts = -v --tb=short --disable-warnings --alluredir=allure-results --browser-name=chrome --screenshot=on --screenshot_path=../screenshots
-
-# Markers
+# Маркеры для отладки и управления тестами
 markers =
-    crit: Critical tests
+    # Маркеры для отладки
+    debug: Tests requiring debugging
+    fixme: Broken tests that need fixing
+    skip: Tests to be skipped
+    xfail: Tests expected to fail
+    flaky: Flaky tests that may fail occasionally
+    
+    # Маркеры по приоритету
+    critical: Critical path tests
+    high: High priority tests
     medium: Medium priority tests
     low: Low priority tests
+    
+    # Маркеры по типу
     smoke: Smoke tests
     regression: Regression tests
     api: API tests
     ui: UI tests
-    login: Login related tests
-    validation: Form validation tests
+    database: Database tests
+    performance: Performance tests
+    security: Security tests
+    
+    # Маркеры по модулям
+    auth: Authentication tests
+    ecommerce: E-commerce module tests
+    social: Social network module tests
+    tasks: Task management module tests
+    content: Content management module tests
+    analytics: Analytics module tests
+    
+    # Маркеры по компонентам
+    login: Login page tests
     navigation: Navigation tests
-    slow: Slow running tests
-    skip: Skip this test
-    xfail: Expected to fail
-    flaky: Flaky test
+    forms: Form validation tests
+    modals: Modal window tests
+    charts: Chart and visualization tests
 
-# Logging
+# Настройки выполнения
+addopts = 
+    --strict-markers
+    --strict-config
+    --verbose
+    --tb=short
+    --maxfail=5
+    --reruns=2
+    --reruns-delay=1
+    --alluredir=allure-results
+    --screenshot_path=screenshots
+    --clean-alluredir
+    -ra
+
+# Фильтры предупреждений
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::UserWarning:selenium.*
+
+# Настройки логов
 log_cli = true
 log_cli_level = INFO
 log_cli_format = %(asctime)s [%(levelname)8s] %(name)s: %(message)s
 log_cli_date_format = %Y-%m-%d %H:%M:%S
 
-# Environment variables
-env =
-    FRONTEND_URL = http://frontend:80
-    BACKEND_URL = http://backend:5000
-    SELENIUM_HUB_URL = http://selenium-hub:4444/wd/hub
-    BROWSER_NAME = chrome
-    HEADLESS = false
-    IMPLICIT_WAIT = 15
-    PAGE_LOAD_TIMEOUT = 30
-    SCREENSHOT_ON_FAILURE = true
-    MAX_RETRIES = 2
-    RETRY_DELAY = 1
+log_file = pytest.log
+log_file_level = DEBUG
+log_file_format = %(asctime)s [%(levelname)8s] %(filename)s:%(lineno)d: %(message)s
+log_file_date_format = %Y-%m-%d %H:%M:%S
 
-# Test execution
-minversion = 6.0
+# Настройки для параллельного выполнения
+# Для запуска в параллели: pytest -n auto
+# Для запуска конкретного количества процессов: pytest -n 4
+
+# Настройки таймаутов
+timeout = 300
+timeout_method = thread
+
+# Настройки для Allure
+allure_report_dir = allure-results
+allure_clean_results = true
+
+# Настройки для скриншотов
+screenshot_path = screenshots
+screenshot_on_failure = true
+screenshot_on_success = false
