--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,8 @@ python-dotenv==1.1.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.9
+
+# New dependencies for Phase 1
+slowapi==0.1.9  # Rate limiting
+python-json-logger==2.0.7  # JSON logging
+prometheus-client==0.19.0  # Metrics
