--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,4 @@ python-multipart==0.0.9
 slowapi==0.1.9  # Rate limiting
 python-json-logger==2.0.7  # JSON logging
 prometheus-client==0.19.0  # Metrics
+psutil==5.9.8  # System metrics
