feat: Complete E2E Automation Application - All 5 Phases Implemented
 Phase 1: Core Features
- Authentication & Authorization system
- E-commerce module with products, orders, payments
- Social Network module with posts, comments, likes
- Task Management module with projects and tasks
- Content Management module with articles and media
- Analytics & Dashboard with comprehensive metrics

 Phase 2: Advanced Features
- Notifications system with real-time updates
- Media Upload & Management with drag&drop
- Search & Filter system with advanced queries
- Privacy & Settings with comprehensive controls
- Real-time features with WebSocket support

 Phase 3: Enhanced UI/UX
- Advanced Modals & Forms with validation
- Interactive Elements with animations
- Touch Gestures for mobile devices
- Mobile Navigation with responsive design
- Accessibility Features (ARIA, keyboard navigation)
- Performance Optimization with lazy loading

 Phase 4: AI & Advanced Analytics
- AI & Machine Learning with recommendations
- Advanced Analytics with detailed reports
- External Integrations (Stripe, SendGrid, etc.)
- Advanced Notifications with smart grouping
- Roles & Permissions system

 Phase 5: Production Ready
- Performance Optimization with caching
- Security Hardening with middleware
- Monitoring & Logging with Prometheus/Grafana
- Comprehensive Testing system
- Production Deployment with Docker/K8s

 Production Features:
- Docker Compose production configuration
- Kubernetes manifests for scaling
- Nginx reverse proxy with SSL
- Monitoring stack (Prometheus, Grafana, ELK)
- Automated deployment scripts
- Complete documentation

 Ready for production deployment!

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,40 +1,48 @@
-# Production Dockerfile
+# Production Dockerfile for Backend
 FROM python:3.11-slim
 
-# Установка системных зависимостей
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
-    libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV ENVIRONMENT=production
 
-# Создание пользователя для безопасности
-RUN groupadd -r appuser && useradd -r -g appuser appuser
-
-# Установка рабочей директории
+# Set work directory
 WORKDIR /app
 
-# Копирование requirements
+# Install system dependencies
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+    build-essential \
+    curl \
+    libpq-dev \
+    gcc \
+    g++ \
+    libffi-dev \
+    libssl-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
 COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt
 
-# Установка Python зависимостей
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Копирование исходного кода
+# Copy project
 COPY . .
 
-# Создание директории для логов
-RUN mkdir -p /app/logs && chown -R appuser:appuser /app
+# Create necessary directories
+RUN mkdir -p /app/logs /app/uploads /app/static
 
-# Переключение на непривилегированного пользователя
+# Create non-root user
+RUN adduser --disabled-password --gecos '' appuser \
+    && chown -R appuser:appuser /app
 USER appuser
 
-# Открытие порта
+# Expose port
 EXPOSE 8000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-# Запуск приложения
+# Run the application
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
