--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,3 +15,8 @@ slowapi==0.1.9  # Rate limiting
 python-json-logger==2.0.7  # JSON logging
 prometheus-client==0.19.0  # Metrics
 psutil==5.9.8  # System metrics
+fastapi-mail==1.4.1  # Email notifications
+jinja2==3.1.4  # Email templates
+python-multipart==0.0.9  # File uploads
+pillow==10.4.0  # Image processing
+aiofiles==24.1.0  # Async file operations
