--- a/monitoring/alert_rules.yml
+++ b/monitoring/alert_rules.yml
@@ -1,44 +1,29 @@
 groups:
-  - name: backend_alerts
+  - name: e2e_automation_alerts
     rules:
+      # High error rate
       - alert: HighErrorRate
-        expr: rate(http_requests_total{status_code=~"5.."}[5m]) > 0.1
+        expr: rate(http_requests_total{status=~"5.."}[5m]) > 0.1
         for: 2m
         labels:
-          severity: warning
+          severity: critical
         annotations:
           summary: "High error rate detected"
           description: "Error rate is {{ $value }} errors per second"
 
+      # High response time
       - alert: HighResponseTime
-        expr: histogram_quantile(0.95, rate(http_request_duration_seconds_bucket[5m])) > 2
+        expr: histogram_quantile(0.95, rate(http_request_duration_seconds_bucket[5m])) > 1
         for: 5m
         labels:
           severity: warning
         annotations:
-          summary: "High response time detected"
-          description: "95th percentile response time is {{ $value }}s"
+          summary: "High response time"
+          description: "95th percentile response time is {{ $value }} seconds"
 
-      - alert: ServiceDown
-        expr: up{job="backend"} == 0
-        for: 1m
-        labels:
-          severity: critical
-        annotations:
-          summary: "Backend service is down"
-          description: "Backend service has been down for more than 1 minute"
-
-      - alert: HighMemoryUsage
-        expr: memory_usage_percent > 90
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "High memory usage"
-          description: "Memory usage is {{ $value }}%"
-
+      # High CPU usage
       - alert: HighCPUUsage
-        expr: cpu_usage_percent > 80
+        expr: 100 - (avg by(instance) (rate(node_cpu_seconds_total{mode="idle"}[5m])) * 100) > 80
         for: 5m
         labels:
           severity: warning
@@ -46,40 +31,52 @@ groups:
           summary: "High CPU usage"
           description: "CPU usage is {{ $value }}%"
 
-      - alert: DatabaseConnectionFailed
-        expr: up{job="postgres"} == 0
+      # High memory usage
+      - alert: HighMemoryUsage
+        expr: (1 - (node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes)) * 100 > 85
+        for: 5m
+        labels:
+          severity: warning
+        annotations:
+          summary: "High memory usage"
+          description: "Memory usage is {{ $value }}%"
+
+      # Disk space low
+      - alert: LowDiskSpace
+        expr: (1 - (node_filesystem_avail_bytes / node_filesystem_size_bytes)) * 100 > 90
+        for: 5m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Low disk space"
+          description: "Disk space is {{ $value }}% full"
+
+      # Service down
+      - alert: ServiceDown
+        expr: up == 0
         for: 1m
         labels:
           severity: critical
         annotations:
-          summary: "Database connection failed"
-          description: "Cannot connect to PostgreSQL database"
+          summary: "Service is down"
+          description: "{{ $labels.job }} service is down"
 
-      - alert: RedisConnectionFailed
-        expr: up{job="redis"} == 0
+      # Database connection issues
+      - alert: DatabaseConnectionIssues
+        expr: rate(database_connection_errors_total[5m]) > 0.1
+        for: 2m
+        labels:
+          severity: critical
+        annotations:
+          summary: "Database connection issues"
+          description: "Database connection error rate is {{ $value }} errors per second"
+
+      # Redis connection issues
+      - alert: RedisConnectionIssues
+        expr: redis_up == 0
         for: 1m
         labels:
           severity: warning
         annotations:
-          summary: "Redis connection failed"
-          description: "Cannot connect to Redis"
-
-  - name: business_alerts
-    rules:
-      - alert: LowUserRegistration
-        expr: rate(users_registered_total[1h]) < 1
-        for: 30m
-        labels:
-          severity: info
-        annotations:
-          summary: "Low user registration rate"
-          description: "User registration rate is {{ $value }} per hour"
-
-      - alert: HighFailedLogins
-        expr: rate(http_errors_total{error_type="client_error"}[5m]) > 10
-        for: 2m
-        labels:
-          severity: warning
-        annotations:
-          summary: "High number of failed logins"
-          description: "Failed login rate is {{ $value }} per second"
+          summary: "Redis connection issues"
+          description: "Redis is not responding"
