--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,3 +20,4 @@ jinja2==3.1.4  # Email templates
 python-multipart==0.0.9  # File uploads
 pillow==10.4.0  # Image processing
 aiofiles==24.1.0  # Async file operations
+aiohttp==3.9.1  # HTTP client for integrations
