Major cleanup and refactoring
- Removed duplicate and unused files:
  * Backend: app_new_backup.py, routers.py, schemas.py, test DBs
  * Frontend: login-backup.html, login-optimized.html, register.html, script.js, auth_old.js, auth_optimized.js
  * E2E: requirements_new.txt, old test files, debug scripts
  * Root: old API files, example tests

- Fixed API endpoints configuration:
  * Updated all frontend files to use correct port 5000 instead of 8000
  * Fixed api-base meta tags in HTML files
  * Updated fallback URLs in JavaScript services

- Moved create_user.py to scripts/ directory
- Updated Docker configuration and rebuilt containers
- Verified all services work correctly after cleanup

 System is now clean and fully functional

--- a/e2e-automation/Dockerfile
+++ b/e2e-automation/Dockerfile
@@ -26,4 +26,4 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 RUN chmod +x run_tests_with_delay.sh run_tests_smart.sh
 
 # Команда по умолчанию
-CMD ["./run_tests_with_delay.sh"]
+RUN ["pytest", "tests/test_login_page.py"]
