--- a/e2e-automation/pytest.ini
+++ b/e2e-automation/pytest.ini
@@ -1,10 +1,4 @@
-[tool:pytest]
-# Основные настройки
-minversion = 6.0
-testpaths = tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
+[pytest]
 
 # Маркеры для отладки и управления тестами
 markers =
