--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,18 @@ services:
     env_file:
       - ./backend/.env
     environment:
+      - DATABASE_URL=postgresql://my_user:my_password@postgres:5432/my_database
+      - MONGO_URL=mongodb://my_user:my_password@mongodb:27017/my_database
       - REDIS_URL=redis://redis:6379
     command: [ "uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000", "--reload" ]
     volumes:
       - ./backend:/app
-      - ./database:/app/database
     depends_on:
       - mongodb
       - postgres
       - redis
+    networks:
+      - e2e_automation_network
 
   # Frontend Service
   frontend:
@@ -27,6 +30,10 @@ services:
     environment:
       - API_HOST=backend
       - API_PORT=5000
+    depends_on:
+      - backend
+    networks:
+      - e2e_automation_network
 
   # Database Services
   mongodb:
@@ -37,6 +44,8 @@ services:
       - MONGO_INITDB_DATABASE=my_database
       - MONGO_INITDB_ROOT_USERNAME=my_user
       - MONGO_INITDB_ROOT_PASSWORD=my_password
+    networks:
+      - e2e_automation_network
 
   postgres:
     image: postgres:15
@@ -46,11 +55,15 @@ services:
       - POSTGRES_DB=my_database
       - POSTGRES_USER=my_user
       - POSTGRES_PASSWORD=my_password
+    networks:
+      - e2e_automation_network
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    networks:
+      - e2e_automation_network
 
   # Selenium Hub
   selenium-hub:
@@ -139,6 +152,10 @@ services:
       - ./allure-reports:/app/allure-reports
       - ./allure-history:/app/allure-history
     restart: always
+
+networks:
+  e2e_automation_network:
+    driver: bridge
 
 # You can access:
 # - Frontend: http://localhost:3000
